; ModuleID = '/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_rol.c_update.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/crypto/p/extr_crypto_rol.c_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@flag = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [9 x i8] c"Use ROR\0A\00", align 1
@st = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32)* @update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @update(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i64, i64* @flag, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %3
  %12 = call i32 @eprintf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %30

13:                                               ; preds = %3
  %14 = load i32, i32* %7, align 4
  %15 = call i32* @calloc(i32 1, i32 %14)
  store i32* %15, i32** %8, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = icmp ne i32* %16, null
  br i1 %17, label %19, label %18

18:                                               ; preds = %13
  store i32 0, i32* %4, align 4
  br label %30

19:                                               ; preds = %13
  %20 = load i32*, i32** %6, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @rol_crypt(i32* @st, i32* %20, i32* %21, i32 %22)
  %24 = load i32*, i32** %5, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @r_crypto_append(i32* %24, i32* %25, i32 %26)
  %28 = load i32*, i32** %8, align 8
  %29 = call i32 @free(i32* %28)
  store i32 1, i32* %4, align 4
  br label %30

30:                                               ; preds = %19, %18, %11
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @eprintf(i8*) #1

declare dso_local i32* @calloc(i32, i32) #1

declare dso_local i32 @rol_crypt(i32*, i32*, i32*, i32) #1

declare dso_local i32 @r_crypto_append(i32*, i32*, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
